updated float image left, wrapped text around image, added line height spacing, added margin left and right around image. need to fix footer stuck at top

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,6 @@
 body {
     background-image: url('../images/interlaced.png');
+   
 
 
 }
@@ -10,7 +11,9 @@ body {
 #header {
     background-color: aliceblue;
     background-image: none;
-    max-width: 960px;}
+    max-width: 960px;
+    margin-left: 20px;
+}
     
 
 h1 {
@@ -34,24 +37,44 @@ a {color: gray;}
 }
 
 #full {
-    background-image: url('../images/interlaced.png');
+    
     max-width: 960px;
+    
 }
 
 
-
+ 
 
 .container {
     background-color: aliceblue;
-    margin-top: 20px; 
+    margin-top: 0px; 
+    border-color: gray;
+    border: solid;
+
+}
+
+#floatimage {
+    float: left;
+    width: 30%;
+    margin-left: 30px;
+    margin-right: 30px;
+}
+
+
+.wrapper {
+    width: 70%;
+    margin: 0 wrap;
 }
 
 #main-bio {
     clear:both;
     margin-left: 25px;
     background-color: aliceblue;
+    float: left;
+    
 
 }
+
 
 h2 {
     color: gray;
@@ -61,8 +84,17 @@ h2 {
 }
 
 footer {
-    margin-left: 25px;
+    
     text-align: center;
     font-size: 10px;
 
 } 
+
+p {
+   line-height: 30px;
+   
+    
+    
+    
+    
+}
